# hildon-time-zone-chooser

./: Makefile.am  configure.ac  hildon-time-zone-chooser.pc.in
debian/: changelog  control
include/: hildon-time-zone-chooser.h  hildon-time-zone-pannable-map.h  hildon-time-zone-search.h
src/: Makefile.am  hildon-time-zone-chooser.c  hildon-time-zone-pannable-map.c  hildon-time-zone-search.c
