ACLOCAL_AMFLAGS=-I m4

SUBDIRS = src

hildon_time_zone_chooserinclude_HEADERS = \
		       include/hildon-time-zone-chooser.h \
		       include/hildon-time-zone-pannable-map.h \
		       include/hildon-time-zone-search.h

hildon_time_zone_chooserincludedir = $(includedir)/hildon-extras-1

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA	= hildon-time-zone-chooser.pc
