AC_INIT([hildon-time-zone-chooser], [1.00])
AC_CANONICAL_SYSTEM

AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

AC_HEADER_STDC

AC_PATH_X
AC_PATH_XTRA
AC_SUBST(X_CFLAGS)

AM_GCONF_SOURCE_2

PKG_PROG_PKG_CONFIG

#+++++++++++++++
# Misc programs
#+++++++++++++++

AC_SUBST(CFLAGS)

PKG_CHECK_MODULES(HILDON, hildon-1)
AC_SUBST(HILDON_CFLAGS)
AC_SUBST(HILDON_LIBS)

PKG_CHECK_MODULES(CITYINFO, libcityinfo0-0)
AC_SUBST(CITYINFO_CFLAGS)
AC_SUBST(CITYINFO_LIBS)

PKG_CHECK_MODULES(TIME, libtime)
AC_SUBST(TIME_CFLAGS)
AC_SUBST(TIME_LIBS)

PKG_CHECK_MODULES(X11, x11)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

PKG_CHECK_MODULES(GDB, gdk-2.0)
AC_SUBST(GDK_CFLAGS)
AC_SUBST(GDK_LIBS)

#+++++++++++++++++++
# Directories setup
#+++++++++++++++++++

dnl Localization
GETTEXT_PACKAGE=osso-clock
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "${GETTEXT_PACKAGE}", [gettext package])

AC_OUTPUT([
Makefile
src/Makefile
])

