AC_INIT([hildon-time-zone-chooser], [1.00])
AC_CANONICAL_SYSTEM

AC_CONFIG_MACRO_DIRS([m4])
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

AC_HEADER_STDC

AC_PATH_X
AC_PATH_XTRA
AC_SUBST(X_CFLAGS)

AM_GCONF_SOURCE_2

PKG_PROG_PKG_CONFIG

#+++++++++++++++
# Misc programs
#+++++++++++++++

AC_SUBST(CFLAGS)

PKG_CHECK_MODULES(HILDON, hildon-1)
AC_SUBST(HILDON_CFLAGS)
AC_SUBST(HILDON_LIBS)

PKG_CHECK_MODULES(CITYINFO, libcityinfo0-0)
AC_SUBST(CITYINFO_CFLAGS)
AC_SUBST(CITYINFO_LIBS)

PKG_CHECK_MODULES(TIME, libtime)
AC_SUBST(TIME_CFLAGS)
AC_SUBST(TIME_LIBS)

PKG_CHECK_MODULES(X11, x11)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

PKG_CHECK_MODULES(GDB, gdk-2.0)
AC_SUBST(GDK_CFLAGS)
AC_SUBST(GDK_LIBS)

PKG_CHECK_MODULES(CLOCKCORE, libclockcore0-0)
AC_SUBST(CLOCKCORE_CFLAGS)
AC_SUBST(CLOCKCORE_LIBS)

#+++++++++++++++++++
# Directories setup
#+++++++++++++++++++

AC_CONFIG_FILES([
Makefile
src/Makefile
hildon-time-zone-chooser.pc
])

AC_OUTPUT
